# gameboi-ao

./: .gitignore  pnpm-lock.yaml
.github/: release_drafter_config.yml
.github/workflows/: release_drafter.yml
app/: index.ts
app/public/: index.html
contracts/: .gitignore  .npmrc  README.md  deploy.config.example.ts  package.json  tsconfig.json
contracts/app/: index.ts
contracts/app/public/: index.html
contracts/scripts/bash/: process
contracts/scripts/ts/: generate.ts  get_screen.ts  upload_rom.ts
contracts/src/processes/gbc_process/: amalg.cache  compiled.lua  process.lua
contracts/src/processes/gbc_process/gameboy/: audio.lua  cartridge.lua  dma.lua  init.lua  input.lua  interrupts.lua  io.lua  memory.lua  rom_header.lua  timers.lua
contracts/src/processes/gbc_process/gameboy/graphics/: registers.lua
contracts/src/processes/gbc_process/gameboy/mbc/: mbc1.lua  mbc2.lua
contracts/src/processes/gbc_process/gameboy/z80/: init.lua  jp.lua  registers.lua
scripts/bash/: generate
scripts/ts/: LuaLoader.ts  minifyUtils.ts  process.ts
src/processes/gbc_process/: amalg.cache  compiled.lua  process.lua
src/processes/gbc_process/gameboy/: init.lua
src/processes/gbc_process/gameboy/graphics/: cache.lua  init.lua  palette.lua
src/processes/gbc_process/gameboy/mbc/: mbc3.lua  mbc5.lua
src/processes/gbc_process/gameboy/z80/: arithmetic.lua  bitwise.lua  call.lua  cp.lua  inc_dec.lua  ld.lua  rl_rr_cb.lua  stack.lua
wasm-module/: CMakeLists.txt
wasm-module/src/: main.cpp
